fix marks and question

--- a/templates/quiz/adminbase.html
+++ b/templates/quiz/adminbase.html
@@ -151,8 +151,7 @@
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-
-
+  {% block links %} {% endblock links %}
 </head>
 
 <body>
@@ -185,8 +184,7 @@
     <a href="/admin-student"><i class="fas fa-user-graduate"></i><span>Student</span></a>
     <a href="/admin-course"><i class="fas fa-book"></i><span>Courses</span></a>
     <a href="/admin-question"><i class="fas fa-question-circle"></i><span>Questions</span></a>
-    
-
+    <a href="/admin-view-student-marks"><i class="fas fa-question-circle"></i><span>Results</span></a>
 
   </div>
   <!--sidebar end-->
