--- a/templates/quiz/view_question.html
+++ b/templates/quiz/view_question.html
@@ -1,58 +1,124 @@
 {% extends 'quiz/adminbase.html' %}
-{% block content %}
 {%load static%}
+{% block links %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-<head>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<style media="screen">
+  a:link {
+    text-decoration: none;
+  }
 
-  <style media="screen">
-    a:link {
-      text-decoration: none;
-    }
+  h6 {
+    text-align: center;
+  }
 
-    h6 {
-      text-align: center;
-    }
+  .row {
+    margin: 100px;
+  }
 
-    .row {
-      margin: 100px;
-    }
-  </style>
-</head>
+  .circle {
+    -moz-border-radius: 15px/15px;
+    -webkit-border-radius: 15px 15px;
+    border-radius: 15px/15px;
+    border: solid 3px black;
+    width: 15px;
+    height: 15px;
+  }
+
+  .filled-circle {
+    background-color: black;
+    -moz-border-radius: 15px/15px;
+    -webkit-border-radius: 15px 15px;
+    border-radius: 15px/15px;
+    border: solid 3px black;
+    width: 15px;
+    height: 15px;
+  }
+</style>
+{% endblock links %}
+
+{% block content %}
+
 <br><br>
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
       <h6 class="panel-title">Questions</h6>
     </div>
+    <div class="ml-2">
+      <h3 class="text-info">{{question.question}}</h3>
+      <h4 style="text-align: right;">[Marks {{question.mark}}]</h4>
+      <input type="hidden" name="csrfmiddlewaretoken"
+        value="C24rUotmdHawVQJL3KrqiWxvti8UffOFYUc8TRbZtLt36AVLdP3jbkzUVe3beRAa">
 
-    <table class="table table-hover" id="dev-table">
-      <tr>
-        <td><b>Question Title: </b></td>
-        <td colspan="2">{{question.question}}</td>
-      </tr>
-      <tr>
-        <td><b>Options: </b></td>
-        <td colspan="2">
-          <ol>
-            <li>{{question.option1}}</li>
-            <li>{{question.option2}}</li>
-            <li>{{question.option3}}</li>
-            <li>{{question.option4}}</li>
-          </ol>
-        </td>
-      </tr>
-      <tr>
-        <td><b>Mark</b></td>
-        <td><td>{{question.mark}}</td></td>
-        <td><a class="btn btn-primary btn-xs" href="{% url 'delete-question' question.id  %}"><span
-          class="glyphicon glyphicon-trash"></span></a></td>
-      </tr>
-    </table>
+
+      <div class="d-flex form-check mx-4">
+        {% if question.answer == 1 %}
+        <div class="filled-circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option1">
+          {{question.option1}}
+        </h3>
+        {% else %}
+        <div class="circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option1">
+          {{question.option1}}
+        </h3>
+        {% endif %}
+      </div>
+
+
+      <div class="d-flex form-check mx-4">
+        {% if question.answer == 2 %}
+        <div class="filled-circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option2">
+          {{question.option2}}
+        </h3>
+        {% else %}
+        <div class="circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option2">
+          {{question.option2}}
+        </h3>
+        {% endif %}
+      </div>
+
+
+      <div class="d-flex form-check mx-4">
+        {% if question.answer == 3 %}
+        <div class="filled-circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option3">
+          {{question.option3}}
+        </h3>
+        {% else %}
+        <div class="circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option3">
+          {{question.option3}}
+        </h3>
+        {% endif %}
+      </div>
+
+
+      <div class="d-flex form-check mx-4">
+        {% if question.answer == 4 %}
+        <div class="filled-circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option4">
+          {{question.option4}}
+        </h3>
+        {% else %}
+        <div class="circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option4">
+          {{question.option4}}
+        </h3>
+        {% endif %}
+      </div>
+    </div>
+    <div class="d-flex ml-2"> 
+      <h3>Delete Question:</h3> 
+      <a class="btn btn-primary btn-xs mx-2" href="{% url 'delete-question' question.id  %}"><span
+        class="glyphicon glyphicon-trash"></span></a>
+    </div>
   </div>
-</div>
 
-<br><br><br><br><br><br>
-{% endblock content %}
+  <br><br><br><br><br><br>
+  {% endblock content %}
