--- a/templates/teacher/see_question.html
+++ b/templates/teacher/see_question.html
@@ -3,7 +3,8 @@
 {%load static%}
 
 <head>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
@@ -19,6 +20,24 @@
     .row {
       margin: 100px;
     }
+    .circle {
+    -moz-border-radius: 15px/15px;
+    -webkit-border-radius: 15px 15px;
+    border-radius: 15px/15px;
+    border: solid 3px black;
+    width: 15px;
+    height: 15px;
+  }
+
+  .filled-circle {
+    background-color: black;
+    -moz-border-radius: 15px/15px;
+    -webkit-border-radius: 15px 15px;
+    border-radius: 15px/15px;
+    border: solid 3px black;
+    width: 15px;
+    height: 15px;
+  }
   </style>
 </head>
 <br><br>
@@ -27,29 +46,78 @@
     <div class="panel-heading">
       <h6 class="panel-title">Questions</h6>
     </div>
-    <table class="table table-hover" id="dev-table">
-      <thead>
-        <tr>
+    <div class="ml-2">
+      <h3 class="text-info">{{question.question}}</h3>
+      <h4 style="text-align: right;">[Marks {{question.mark}}]</h4>
+      <input type="hidden" name="csrfmiddlewaretoken"
+        value="C24rUotmdHawVQJL3KrqiWxvti8UffOFYUc8TRbZtLt36AVLdP3jbkzUVe3beRAa">
 
-          <th>Question</th>
-         
-          <th>Marks</th>
-          <th>Delete Question</th>
-        </tr>
-      </thead>
-      {% for c in questions %}
-      <tr>
 
-        <td> {{c.question}}</td>
-        
-        <td>{{c.mark}}</td>
-        <td><a class="btn btn-primary btn-xs" href="{% url 'remove-question' c.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
-        
-      </tr>
-      {% endfor %}
-    </table>
+      <div class="d-flex form-check mx-4">
+        {% if question.answer == 1 %}
+        <div class="filled-circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option1">
+          {{question.option1}}
+        </h3>
+        {% else %}
+        <div class="circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option1">
+          {{question.option1}}
+        </h3>
+        {% endif %}
+      </div>
+
+
+      <div class="d-flex form-check mx-4">
+        {% if question.answer == 2 %}
+        <div class="filled-circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option2">
+          {{question.option2}}
+        </h3>
+        {% else %}
+        <div class="circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option2">
+          {{question.option2}}
+        </h3>
+        {% endif %}
+      </div>
+
+
+      <div class="d-flex form-check mx-4">
+        {% if question.answer == 3 %}
+        <div class="filled-circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option3">
+          {{question.option3}}
+        </h3>
+        {% else %}
+        <div class="circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option3">
+          {{question.option3}}
+        </h3>
+        {% endif %}
+      </div>
+
+
+      <div class="d-flex form-check mx-4">
+        {% if question.answer == 4 %}
+        <div class="filled-circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option4">
+          {{question.option4}}
+        </h3>
+        {% else %}
+        <div class="circle mt-2"></div>
+        <h3 class="form-check-label mx-2" for="option4">
+          {{question.option4}}
+        </h3>
+        {% endif %}
+      </div>
+    </div>
+    <div class="d-flex ml-2"> 
+      <h3>Delete Question:</h3> 
+      <a class="btn btn-primary btn-xs mx-2" href="{% url 'remove-question' question.id  %}"><span
+        class="glyphicon glyphicon-trash"></span></a>
+    </div>
   </div>
-</div>
 
 <br><br><br><br><br><br>
 {% endblock content %}
