--- a/templates/quiz/admin_add_question.html
+++ b/templates/quiz/admin_add_question.html
@@ -22,7 +22,7 @@
     {%csrf_token%}
     <div class="form-group">
       <label for="question">Question</label>
-      {% render_field questionForm.question|attr:'required:true' class="form-control" placeholder="What is the currency of India ?" %}
+      {% render_field questionForm.question|attr:'required:true' class="form-control" placeholder="What is the currency of Bangladesh ?" %}
         <br>
       <label for="question_number">Marks</label>
       {% render_field questionForm.mark|attr:'required:true' class="form-control" placeholder="10" %}
