--- a/templates/quiz/admin_view_student.html
+++ b/templates/quiz/admin_view_student.html
@@ -30,7 +30,7 @@
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-
+          <th>Username</th>
           <th>Name</th>
           <th>Profile Picture</th> 
          
@@ -40,7 +40,7 @@
       </thead>
       {% for t in students %}
       <tr>
-
+        <td>{{t.user.username}}</td>
         <td> {{t.get_name}}</td>
         <td> <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
         
